# whistle

./: README.md
wust_detection/: MV-SUA133GC-Group0.config  main.py  monocular_camera.py
wust_detection/utils/: general.py  general1.py  google_utils.py
wust_msgs/: CMakeLists.txt  package.xml
wust_msgs/msg/: EnemyInfo.msg  RemainBullet.msg  WhistleResult.msg
wust_msgs/srv/: SetTopAlgorithm.srv
wust_whistle/: CMakeLists.txt  package.xml
wust_whistle/cfg/: WhistleParam.cfg
wust_whistle/src/: wust_whistle_node.cpp
